# AvianVisitors

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: release.yml
avian/: index.html
avian/api/: birdnet-api.php  cutout.php  menu.php  recording.php  spectrogram.php  wiki.php
avian/forwarding/: README.md  avian-mqtt.service  caddy-auth.caddy  cloudflared.yml
avian/frontend/: apt.js  index.html  styles.css
avian/scripts/: pregen.py  prompt.template.md
birdnet/: birdnet_analysis.py  birdnet_recording.sh  pyproject.toml
birdnet/model/l18n/: labels_af.json  labels_ca.json  labels_cs.json  labels_de.json  labels_es.json  labels_et.json  labels_fi.json  labels_hr.json  labels_hu.json  labels_id.json  labels_is.json  labels_it.json  labels_ja.json  labels_ko.json  labels_lt.json  labels_lv.json  labels_nl.json  labels_no.json  labels_pl.json  labels_pt.json  labels_ro.json  labels_ru.json  labels_sk.json  labels_sl.json  labels_sr.json  labels_sv.json  labels_th.json  labels_tr.json  labels_uk.json  labels_zh_CN.json  labels_zh_TW.json
birdnet/tests/: test_analysis_pure.py  test_classes.py  test_db.py  test_helpers.py  test_models.py  test_reporting.py
birdnet/utils/: analysis.py  helpers.py  models.py
docker/: Caddyfile  Dockerfile  entrypoint.sh  supervisord.conf
docs/: development.md  docker.md
scripts/: install_services.sh  update_birdnet.sh
webui/: .oxfmtrc.json  .oxlintrc.json  composer.json  mago.toml  package-lock.json  package.json  phpunit.xml.dist  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
webui/api/: birdnet-status.php
webui/assets/: credits.json
webui/assets/illustrations/: acanthis-flammea.avif  accipiter-nisus.avif  accipiter-striatus.avif  acridotheres-fuscus.avif  (+700 more)
webui/frontend/: index.html  public.html  tsconfig.app.json  vite.config.ts
webui/generate/: Dockerfile  README.md  archive.py  build_masks.py  compose.yaml  photos.py  pregen.py  prompt.template.md  pyproject.toml  verify.py
(+70 files in other folders)
