[project]
name = "avianvisitors"
version = "0.0.1"
description = "Live bird collage from a window microphone, powered by BirdNET."
requires-python = ">=3.13,<3.14"
dependencies = [
    "librosa",
    "numpy>=2.5.1",
    "pandas",
    "soundfile",
    "inotify",
    "requests",
    "suntime",
    "tzlocal",
    "pytz",
    "pillow",
    "audioop-lts",
    "standard-aifc",
    "standard-sunau",
]

[project.optional-dependencies]
stats = [
    "streamlit",
    "plotly",
    "seaborn",
    "matplotlib",
    "pyarrow",
]
notify = [
    "apprise",
    "paho-mqtt!=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
