[project]
name = "avianvisitors-generation"
version = "0.0.1"
description = "FLUX.1-dev illustration + BiRefNet cutout pipeline for the AvianVisitors collage."
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.0",
    "rembg>=2.0.76",
    "onnxruntime>=1.22",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E741"]

[tool.ruff.lint.per-file-ignores]
"verify.py" = ["E501"]
