[project]
name = "avianvisitors-generation"
version = "0.0.1"
description = "Creative-Commons bird photo fetch + BiRefNet cutout pipeline for the AvianVisitors collage."
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.0",
    "pillow-avif-plugin>=1.4",
    "rembg>=2.0.76",
    "onnxruntime>=1.22",
    "numpy>=2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E741"]
